<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Result">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#FFC107"
                android:text="@string/result"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="189dp"
                android:layout_height="192dp"
                android:layout_marginTop="47dp"
                android:src="@drawable/letsgo"
                app:layout_constraintEnd_toEndOf="@+id/tvResult"
                app:layout_constraintStart_toStartOf="@+id/tvResult"
                app:layout_constraintTop_toBottomOf="@+id/tvResult"
                android:contentDescription="@string/imgscoreouput"
                tools:ignore="ImageContrastCheck"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFC107"
                android:text="@string/you_re_score"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <Button
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="127dp"
                android:text="@string/go_back"
                app:layout_constraintEnd_toEndOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
